<resources>
    <string name="app_name" translatable="false" untranslatable="false">Matter Of Time</string>
    <string name="action_settings" translatable="false" untranslatable="false">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tempos">Tempos</string>
    <string name="formula_de_compasso">Fórmula de compasso</string>
    <string name="nota">Nota</string>
    <string name="play">Tocar</string>
    <string name="stop">Parar</string>
    <string name="playlist">Lista de músicas</string>
    <string name="bpm">BPM</string>
    <string name="compasso_atual">Compasso atual</string>
    <string name="proximo_compasso">Próximo compasso</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="nomedamusica">Nome da música</string>
    <string name="quantidadecompassos">Quantidade de compassos</string>
    <string name="numero_compasso">Compasso #</string>
    <string name="pre_contagem">Pré Contagem</string>
    <string name="contar_entrada">Contar</string>
    <string name="compasso">Compasso</string>
    <string name="remover_compasso">Remover Compasso</string>
    <string name="insere_compasso">Inserir Compasso</string>
    <string name="sem_musicas">Sem Músicas</string>
    <string name="ordem_da_musica_na_playlist">Ordem da música na Playlist</string>
    <string name="name_is_required">Nome obrigatório</string>
    <string name="confirmar_compasso">Confirmar compasso</string>
    <string name="tempo_necessario">Necessário tempos por compasso</string>
    <string name="bpm_necessario">Necessário informar o BPM</string>
    <string name="ordem_necessaria">Número na ordem da playlist necessário</string>
    <string name="sem_contagem">Tempos para pré-contagem inválido</string>
    <string name="repeticoes">Repetições</string>
    <string name="tamanho_compassos">Sua música possui </string>
    <string name="compassos">compassos</string>
    <string name="sem_musica">Sem música selecionada</string>
    <string name="sem_compasso">Sem compasso selecionado</string>
    <string name="compasso_inexistente">Compasso inexistente</string>
    <string name="musica_inexistente">Música inexistente</string>
    <string name="posicao_invalida">Posição para música inválida</string>
    <string name="total_de_compassos">Compassos</string>
    <string name="sem_posicao">Sem posição selecionada</string>
    <string name="usuario">Usuário</string>
    <string name="email">E-mail</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="senha">Senha</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="enviar_musica">Enviar música</string>
    <string name="selecionar_musica">Selecionar Música</string>
    <string name="baixar_musica">Baixar música</string>
    <string name="musica">Música</string>
    <string name="baixar">Baixar</string>
    <string name="nome">Nome</string>
    <string name="atualizar_musica">Atualizar música</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="enviando_musica">Enviar música</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="sucesso_envio">Música enviada com sucesso</string>
    <string name="erro_envio">Erro ao enviar música</string>
    <string name="informe_musica">Informe o nome da música à ser pesquisada</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="sem_resultados">Sua busca não encontrou resultados</string>
    <string name="erro_download">Erro ao baixar música</string>
    <string name="sucesso_baixar">Sucesso ao baixar música</string>
    <string name="sucesso_importar">Sucesso ao importar arquivo</string>
    <string name="falha_importar">Falha ao importar</string>
    <string name="erro_login">Erro de Login</string>
    <string name="email_necessario">Email necessário</string>
    <string name="senha_necessaria">Senha Necessária</string>
    <string name="ordem_invalida">Ordem da música invalida</string>
    <string name="cadastro">Cadastro</string>
    <string name="loginlogout">Login / Logout</string>
    <string name="title_activity_sign_up" translatable="false">SignUpActivity</string>
    <string name="title_activity_login_logout" translatable="false">LoginLogoutActivity</string>
    <string name="registro">Registro</string>
    <string name="confirme_senha">Confirme sua senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Login</string>
    <string name="sair">Logout</string>
    <string name="confirmacaoSenhaNecessaria">Confirmação da senha necessária</string>
    <string name="senha_nao_confere">Senhas não conferem</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="erro_cadastrar">Erro ao cadastrar usuário</string>
    <string name="cadastro_sucesso">Cadastro realizado</string>
    <string name="login_sucesso">Login efetuado</string>
    <string name="ordem_igual">Há músicas com numero de ordenação iguais</string>
    <string name="logout_sucesso">Logout realizado</string>
    <string name="usuario_nao_logado">Login não efetuado</string>
    <string name="login_nao_realizado">Login não realizado</string>
    <string name="baixando_musica">Baixar música</string>
    <string name="sucesso_download">Download realizado</string>
    <string name="sem_conexao">Sem conexão de internet</string>
    <string name="obrigatorio">Obrigatório</string>
    <string name="repeticoes_necessaria">Repetições necessária</string>
    <string name="o_compasso">O compasso </string>
    <string name="compassos_nao_definidos"> não possui a quantidade de tempos definida</string>
    <string name="repeticoes_nao_definidos"> não possui a quantidade de repetições definida</string>
    <string name="bpm_nao_definido"> não possui o valor de BPM definido</string>
    <string name="ordem_nao_definida"> não foi confirmado</string>
    <string name="icon">Icon</string>
    <string name="compasso_confirmado">Compasso Confirmado</string>
    <string name="musica_confirmada">Música confirmada</string>
    <string name="email_invalido">E-mail inválido</string>
    <string name="semibreve">Semibreve</string>
    <string name="minima">Mímina</string>
    <string name="seminima">Seminima</string>
    <string name="colcheia">Colcheia</string>
    <string name="semicolcheia">Semicolcheia</string>
    <string name="fusa">Fusa</string>
    <string name="semifusa">Semifusa</string>
    <string name="deletar_musica">Deletar música?</string>
    <string name="deletar">Deletar</string>
    <string name="sim">Sim</string>
    <string name="editar_musica">Editar música</string>
    <string name="adicionar">Adicionar</string>
    <string name="adicionado">Adicionado</string>
    <string name="atualizado">Atualizado</string>
    <string name="deletado">Deletado</string>
    <string name="erro">Erro</string>
    <string name="edit">Editar</string>
    <string name="user_area">Área do usuário</string>
    <string name="pesquisando">Pesquisando...</string>
    <string name="adicionar_musica">Adicionar música</string>
    <string name="atualizar">Atualizar</string>
    <string name="email_cadastrado">E-mail já cadastrado</string>
    <string name="valor_incompativel">Defina um valor de BPM entre 30 e 250</string>
    <string name="compassos_excedentes">Defina uma quantidade de compassos menor que 999</string>
    <string name="senha_invalida">Senha inválida</string>
    <string name="ajuda">Ajuda</string>
    <string name="title_activity_ajuda" translatable="false">AjudaActivity</string>
    <string name="realizar_cadastro">Realizar Cadastro</string>
    <string name="help_cadastro">Para realizar o cadastro de usuário, na tela Cadastro, insira nos campos E-mail, Senha e Confirme sua senha, um e-mail válido, a senha desejada e a confirmação da senha respectivamente, após inserir os dados clique no botão cadastrar.</string>
    <string name="login" translatable="false">Login</string>
    <string name="help_login">Para realizar o login, na tela Login/Logout, digite nos campos E-mail e Senha, seu e-mail e senha cadastrados e clique no botão login.</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="help_logout" >Na tela Login/Logout, Clique no botão Logout.</string>
    <string name="tocar_compasso">Tocar compasso continuamente</string>
    <string name="help_tocar_compasso">Para tocar um compasso continuamente, na tela TOCAR, defina a quantidade de tempos por compasso, a nota de referencia que irá valer um tempo para aquele compasso(entre Semibreve e Semifusa) e o valor dos batimentos por minuto para este compasso(entre 30 e 250) clique no botão com simbolo de confirmado e depois no botão com o simbolo de play.</string>
    <string name="criar_musica">Criar música</string>
    <string name="editar_compasso">Editar Compasso</string>
    <string name="h_deletar_musica">Deletar música</string>
    <string name="help_adicionar_musica">Para criar uma música que irá possuir andamentos de compassos, na tela EDITAR, clique no botão com um sinal de + no canto inferior direito da tela, insira o nome e a quantidade de compassos que a música irá ter e clique em ADICIONAR.</string>
    <string name="editar_musica1">Para para editar uma música, na tela EDITAR, selecione a música desejada na Playlist, escolha em qual posição ela será exibida definindo um valor no campo Ordem da música na Playlist; Na caixa de seleção Pré Contagem é possivel selecionar se a música irá possuir ou não tempos de contagem preparatórios antes do primeiro compasso da música; Se a música for possuir uma Pré Contagem, defina quantos tempos deseja e clique no botão com simbolo de confirmado.</string>
    <string name="help_editar2">Ainda quanto a edição da musica é possivel alterar seu nome e quantos compassos ela possui, para isto clique e pressione a referida música na Playlist e selecione Editar música, selecione um novo nome e uma nova quantidade de compassos para a mesma(andamentos de compassos anteriormente definidos serão apagados)</string>
    <string name="help_compasso">Para editar um compasso de uma música, na tela EDITAR, selecione uma música na playlist, no campo Compasso # defina o numero do compasso quer editar, no campo BPM defina o valor dos batimentos por minuto, no campo Tempos defina quantos tempos este compasso irá possuir, selecione uma nota que irá ser referente à um tempo neste compasso(entre Semibreve e Semicolheia), defina no campo Repetições a quantidade de vezes que este compasso será repetido durante a contagem de tempos.</string>
    <string name="help_remover_compasso">Para remover um compasso de uma música, na tela EDITAR, selecione a música na playlist, informe qual o numero do compasso que deseja remover no campo Compasso # e clique no botão REMOVER COMPASSO.</string>
    <string name="help_inserir_compasso">Para inserir um compasso em uma música, na tela EDITAR, selecione a música na Playlist e clique no botão INSERIR COMPASSO, o novo compasso será adicionado após o ultimo compasso existente.</string>
    <string name="help_deletar">Para deletar uma música, na tela EDITAR, clique e pressiona a música desejada na Playlist, clique em deletar e clique em SIM.</string>
    <string name="help_enviar_musica">Para enviar uma musica criada para o repositório online, faça login com seu usuário, então na tela ÁREA DO USUÁRIO clique no botão SELECIONAR MÚSICA, selecione a música desejada e clique em ADICIONAR, clique no botão ENVIAR MÚSICA e na caixa de diálogo clique em enviar.</string>
    <string name="help_baixar_musica">Para baixar andamentos de uma música do repositório online, na tela ÁREA DO USUÁRIO, digite um termo para busca no campo Música, clique em pesquisar, selecione a música que deseja na lista, clique no botão baixar e em seguida em BAIXAR MÚSICA.</string>
</resources>